fixtures/outputs/rust_compile_error.stderr
   Compiling haycut v0.1.0 (/repo/haycut)
error[E0063]: missing field `model` in initializer of `config::Config`
  --> src/config.rs:54:9
   |
54 |         Config {
   |         ^^^^^^ missing `model`
   |
   = note: available fields are: `token`, `trace`
error: could not compile `haycut` (bin "haycut") due to 1 previous error
